# napari-matplotlib-base

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: add_mpl_widget.py
src/napari_matplotlib_base/: __init__.py
src/napari_matplotlib_base/tests/: test_base.py
