[metadata]
name = napari_matplotlib_base
description = A base plugin to setup a Matplotlib canvas in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dstansby/napari-matplotlib-base
author = David Stansby
author_email = d.stansby@ucl.ac.uk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/dstansby/napari-matplotlib-base/issues
    Documentation = https://github.com/dstansby/napari-matplotlib-base#README.md
    Source Code = https://github.com/dstansby/napari-matplotlib-base
    User Support = https://github.com/dstansby/napari-matplotlib-base/issues

[options]
packages = find:
install_requires =
    matplotlib
    napari
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
testing =
    napari[pyqt5]
    pytest
    pytest-cov
    pytest-qt
    tox
    pytest-xvfb;sys_platform == 'linux'
